[gd_scene load_steps=29 format=3 uid="uid://l3pef17gij6y"]

[ext_resource type="Theme" uid="uid://ddwxqo5wrv72t" path="res://Themes/buttons.tres" id="1_rjbr8"]
[ext_resource type="Script" path="res://Themes/MainMenu.gd" id="1_wrl75"]
[ext_resource type="Texture2D" uid="uid://ca57ihvxa2oqw" path="res://BlueBird.png" id="6_q80de"]
[ext_resource type="Texture2D" uid="uid://b08054dfwu8jr" path="res://assets/UIElements/DownArrow.png" id="7_01opr"]
[ext_resource type="Texture2D" uid="uid://corgi7nfkgop8" path="res://YellowBird.png" id="7_btu6g"]
[ext_resource type="Texture2D" uid="uid://4pojahkeqoqg" path="res://assets/PlayerOneIndicator2.png" id="7_pibx2"]
[ext_resource type="Theme" uid="uid://xxrmp6esq2i7" path="res://Themes/BookText.tres" id="8_7agh2"]
[ext_resource type="Texture2D" uid="uid://mg5bwre8mad" path="res://assets/PlayerTwoIndicator2.png" id="9_p165h"]
[ext_resource type="Texture2D" uid="uid://48m0pjupajh7" path="res://assets/BookShadow.png" id="10_c8jl6"]
[ext_resource type="Theme" uid="uid://bue8ub31x3hth" path="res://Themes/NextButton.tres" id="15_88oya"]
[ext_resource type="Texture2D" uid="uid://c4fnp5s1oywp1" path="res://assets/GuideBook.png" id="15_xqo0n"]
[ext_resource type="Theme" uid="uid://c74fudt7rxe2p" path="res://Themes/BookButtonsTheme.tres" id="16_7ajfw"]
[ext_resource type="Texture2D" uid="uid://batg1u18v17j4" path="res://assets/MainMenu2.png" id="16_j47f6"]
[ext_resource type="ButtonGroup" uid="uid://bs54q73sp5kpr" path="res://BookButtons.tres" id="16_kkn6p"]
[ext_resource type="Texture2D" uid="uid://cccvxlwp06a5a" path="res://assets/StartButton.png" id="17_1ly6d"]
[ext_resource type="Texture2D" uid="uid://y3x2ikcj456j" path="res://assets/TimerFrame.png" id="17_2ebop"]
[ext_resource type="Script" path="res://Themes/ButtonEffects.gd" id="17_wtn5y"]
[ext_resource type="Texture2D" uid="uid://ctp86pfw0tkk1" path="res://assets/cross.png" id="19_gheru"]
[ext_resource type="Texture2D" uid="uid://bkq3gjpm2wqqw" path="res://assets/QuitButton.png" id="20_ogkoa"]
[ext_resource type="Texture2D" uid="uid://gqdmt0ctnung" path="res://assets/ButtonRim.png" id="21_kmfur"]
[ext_resource type="Texture2D" uid="uid://ni2rsymk35o" path="res://assets/GenericButton.png" id="21_oswsk"]
[ext_resource type="FontFile" uid="uid://db8xj5yiiubdy" path="res://assets/fonts/mobile-font/MobileFont.ttf" id="22_rw5am"]
[ext_resource type="Material" uid="uid://v01ldyeg87it" path="res://Themes/CRTshader.tres" id="25_48qa8"]

[sub_resource type="InputEventKey" id="InputEventKey_td82p"]
device = -1
ctrl_pressed = true
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_x384m"]
events = [SubResource("InputEventKey_td82p")]

[sub_resource type="Theme" id="Theme_xmskj"]
default_font = ExtResource("22_rw5am")
default_font_size = 90

[sub_resource type="Theme" id="Theme_cn1av"]

[sub_resource type="Theme" id="Theme_tmmsj"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wrl75")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 545)
scale = Vector2(4, 4)

[node name="MainScreen" type="ColorRect" parent="Background"]
unique_name_in_owner = true
visible = false
top_level = true
material = ExtResource("25_48qa8")
clip_contents = true
offset_left = 28.0
offset_top = 28.0
offset_right = 1892.0
offset_bottom = 612.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="Menu" type="Sprite2D" parent="Background"]
position = Vector2(0, -1.25)
texture = ExtResource("16_j47f6")

[node name="timerFrame" type="Sprite2D" parent="Background/Menu"]
z_index = 1
position = Vector2(72, 79)
texture = ExtResource("17_2ebop")

[node name="GameTime" type="Label" parent="Background/Menu"]
visible = false
offset_left = 27.0
offset_top = 60.0
offset_right = 103.0
offset_bottom = 86.0
scale = Vector2(1.18296, 1.09354)
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player1" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(449, 446)
scale = Vector2(18, 18)
texture = ExtResource("6_q80de")
hframes = 2

[node name="PlayerOneIndicator2" type="Sprite2D" parent="Player1"]
position = Vector2(0, -6)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_pibx2")

[node name="Player2" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1568, 451)
rotation = 3.14159
scale = Vector2(18, -18)
texture = ExtResource("7_btu6g")
hframes = 2

[node name="Sprite2D" type="Sprite2D" parent="Player2"]
position = Vector2(0, -6)
scale = Vector2(-0.5, 0.5)
texture = ExtResource("9_p165h")

[node name="PlayerOne" type="Marker2D" parent="."]
position = Vector2(449, 445)

[node name="PlayerOneNext" type="Button" parent="PlayerOne"]
offset_left = 150.0
offset_top = 44.0
offset_right = 238.0
offset_bottom = 132.0
rotation = -1.5708
mouse_default_cursor_shape = 2
theme = ExtResource("15_88oya")
icon = ExtResource("7_01opr")
icon_alignment = 1
script = ExtResource("17_wtn5y")

[node name="PlayerOnePrevious" type="Button" parent="PlayerOne"]
offset_left = -150.0
offset_top = -44.0
offset_right = -62.0
offset_bottom = 44.0
rotation = 1.5708
mouse_default_cursor_shape = 2
theme = ExtResource("15_88oya")
icon = ExtResource("7_01opr")
icon_alignment = 1
script = ExtResource("17_wtn5y")

[node name="PlayerTwo" type="Marker2D" parent="."]
position = Vector2(1568, 451)

[node name="PlayerTwoPrevious" type="Button" parent="PlayerTwo"]
offset_left = -150.0
offset_top = -40.0
offset_right = -70.0
offset_bottom = 40.0
rotation = 1.5708
mouse_default_cursor_shape = 2
theme = ExtResource("15_88oya")
icon = ExtResource("7_01opr")
script = ExtResource("17_wtn5y")

[node name="PlayerTwoNext" type="Button" parent="PlayerTwo"]
offset_left = 150.0
offset_top = 40.0
offset_right = 230.0
offset_bottom = 120.0
rotation = -1.5708
mouse_default_cursor_shape = 2
theme = ExtResource("15_88oya")
icon = ExtResource("7_01opr")
script = ExtResource("17_wtn5y")

[node name="Bottom Buttons Panel" type="Sprite2D" parent="."]
position = Vector2(619, 835)
scale = Vector2(4, 4)

[node name="GameButtons" type="Marker2D" parent="Bottom Buttons Panel"]
position = Vector2(0, -23.25)

[node name="quit" type="Marker2D" parent="Bottom Buttons Panel/GameButtons"]
position = Vector2(0, 40)

[node name="QUIT" type="Sprite2D" parent="Bottom Buttons Panel/GameButtons/quit"]
unique_name_in_owner = true
modulate = Color(0.788235, 0.788235, 0.788235, 1)
texture = ExtResource("20_ogkoa")
hframes = 2

[node name="Sprite2D2" type="Sprite2D" parent="Bottom Buttons Panel/GameButtons/quit/QUIT"]
top_level = true
position = Vector2(619, 766)
scale = Vector2(4, 4)
texture = ExtResource("21_kmfur")

[node name="QUIT" type="Button" parent="Bottom Buttons Panel/GameButtons/quit/QUIT"]
process_mode = 3
offset_left = -32.0
offset_top = -13.0
offset_right = 32.0
offset_bottom = 13.0
mouse_default_cursor_shape = 2
theme = ExtResource("1_rjbr8")

[node name="start" type="Marker2D" parent="Bottom Buttons Panel/GameButtons"]
position = Vector2(0, 2)

[node name="START" type="Sprite2D" parent="Bottom Buttons Panel/GameButtons/start"]
unique_name_in_owner = true
texture = ExtResource("17_1ly6d")
hframes = 2

[node name="START" type="Button" parent="Bottom Buttons Panel/GameButtons/start/START"]
process_mode = 3
offset_left = -32.0
offset_top = -13.5
offset_right = 224.225
offset_bottom = 93.0
scale = Vector2(0.25, 0.25)
mouse_default_cursor_shape = 2
theme = ExtResource("1_rjbr8")
theme_override_font_sizes/font_size = 40
shortcut = SubResource("Shortcut_x384m")
icon_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Bottom Buttons Panel/GameButtons/start/START"]
top_level = true
position = Vector2(619, 918)
scale = Vector2(4, 4)
texture = ExtResource("21_kmfur")

[node name="TimerButtons" type="Marker2D" parent="Bottom Buttons Panel"]
position = Vector2(156.5, -0.5)

[node name="Increase" type="Button" parent="Bottom Buttons Panel/TimerButtons"]
unique_name_in_owner = true
offset_left = 51.0
offset_top = -11.0
offset_right = 73.0
offset_bottom = 14.0
mouse_default_cursor_shape = 2
theme = ExtResource("15_88oya")

[node name="Sprite2D" type="Sprite2D" parent="Bottom Buttons Panel/TimerButtons/Increase"]
show_behind_parent = true
position = Vector2(10.75, 15)
texture = ExtResource("21_oswsk")
hframes = 2

[node name="Decrease" type="Button" parent="Bottom Buttons Panel/TimerButtons"]
unique_name_in_owner = true
offset_left = -71.0
offset_top = -11.0
offset_right = -50.0
offset_bottom = 14.0
mouse_default_cursor_shape = 2
theme = ExtResource("15_88oya")
icon_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Bottom Buttons Panel/TimerButtons/Decrease"]
show_behind_parent = true
position = Vector2(10.75, 14.5)
texture = ExtResource("21_oswsk")
hframes = 2

[node name="TimerScreen" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
material = ExtResource("25_48qa8")
layout_mode = 0
offset_left = 1064.0
offset_top = 776.0
offset_right = 1432.0
offset_bottom = 896.0

[node name="timerLabel" type="Label" parent="TimerScreen"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 0
offset_top = 7.0
offset_right = 368.0
offset_bottom = 124.0
theme = SubResource("Theme_xmskj")
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MouseBlocker" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_force_pass_scroll_events = false
color = Color(0, 0, 0, 0.439216)

[node name="GuideBook" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = 1
position = Vector2(212, 829)
scale = Vector2(4, 4)
texture = ExtResource("15_xqo0n")
hframes = 4

[node name="Page3" type="Button" parent="GuideBook"]
offset_left = 27.5
offset_top = -9.0
offset_right = 32.5
mouse_default_cursor_shape = 2
theme = ExtResource("16_7ajfw")
toggle_mode = true
button_group = ExtResource("16_kkn6p")

[node name="Page2" type="Button" parent="GuideBook"]
offset_left = 27.5
offset_top = -19.0
offset_right = 32.5
offset_bottom = -10.0
mouse_default_cursor_shape = 2
theme = ExtResource("16_7ajfw")
toggle_mode = true
button_group = ExtResource("16_kkn6p")

[node name="Page1" type="Button" parent="GuideBook"]
offset_left = 27.5
offset_top = -29.0
offset_right = 32.5
offset_bottom = -20.0
mouse_default_cursor_shape = 2
theme = ExtResource("16_7ajfw")
toggle_mode = true
button_group = ExtResource("16_kkn6p")

[node name="OpenBook" type="Button" parent="GuideBook"]
offset_left = -32.5
offset_top = -35.0
offset_right = 27.5
offset_bottom = 35.0
mouse_default_cursor_shape = 16
theme = ExtResource("16_7ajfw")
toggle_mode = true
button_group = ExtResource("16_kkn6p")

[node name="PageTitle" type="Label" parent="GuideBook"]
unique_name_in_owner = true
offset_left = -19.25
offset_top = -31.5
offset_right = 108.75
offset_bottom = -11.5
scale = Vector2(0.25, 0.25)
theme = ExtResource("8_7agh2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Controls" type="Label" parent="GuideBook"]
unique_name_in_owner = true
visible = false
offset_left = -27.25
offset_top = -24.25
offset_right = 116.75
offset_bottom = 99.75
scale = Vector2(0.145, 0.145)
theme = ExtResource("8_7agh2")

[node name="MovementP2" type="Label" parent="GuideBook/Controls"]
layout_mode = 0
offset_top = 222.415
offset_right = 112.0
offset_bottom = 342.415
text = "	Left: ARROW LEFT
Right: ARROW RIGHT
Jump: ARROW UP
Run: PERIOD
Attack: COMMA
"

[node name="MovementP1" type="Label" parent="GuideBook/Controls"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 16.0
text = "	Left: A
Right: D
Jump: W
Run: SHIFT
Attack: X
"

[node name="Weapons" type="Label" parent="GuideBook"]
unique_name_in_owner = true
visible = false
offset_left = -27.25
offset_top = -23.75
offset_right = 116.75
offset_bottom = 100.25
scale = Vector2(0.145, 0.145)
theme = ExtResource("8_7agh2")

[node name="VBoxContainer" type="VBoxContainer" parent="GuideBook/Weapons"]
layout_mode = 0
offset_left = 86.2069
offset_top = 18.9655
offset_right = 262.207
offset_bottom = 150.966
theme = SubResource("Theme_cn1av")
theme_override_constants/separation = 55

[node name="Banana gun" type="Label" parent="GuideBook/Weapons/VBoxContainer"]
layout_mode = 2
text = "Banana gun"

[node name="Hammer" type="Label" parent="GuideBook/Weapons/VBoxContainer"]
layout_mode = 2
text = "Hammer"

[node name="Carrot" type="Label" parent="GuideBook/Weapons/VBoxContainer"]
layout_mode = 2
text = "Carrot"

[node name="Pomegranate" type="Label" parent="GuideBook/Weapons/VBoxContainer"]
layout_mode = 2
text = "Pomegranate"

[node name="Melee" type="Label" parent="GuideBook/Weapons/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_tmmsj")
theme_override_constants/line_spacing = -8
text = "
Melee"
vertical_alignment = 1

[node name="Credits" type="Label" parent="GuideBook"]
unique_name_in_owner = true
visible = false
offset_left = -33.0
offset_top = -26.0
offset_right = 111.0
offset_bottom = 98.0
scale = Vector2(0.145, 0.145)
theme = ExtResource("8_7agh2")

[node name="VBoxContainer" type="VBoxContainer" parent="GuideBook/Credits"]
layout_mode = 0
offset_left = 74.1379
offset_top = 39.6552
offset_right = 250.203
offset_bottom = 347.655
theme = SubResource("Theme_cn1av")
theme_override_constants/separation = 46

[node name="Art" type="Label" parent="GuideBook/Credits/VBoxContainer"]
layout_mode = 2
text = "Art: Skenda"

[node name="Code" type="Label" parent="GuideBook/Credits/VBoxContainer"]
layout_mode = 2
text = "Code: Skenda"

[node name="Game design" type="Label" parent="GuideBook/Credits/VBoxContainer"]
layout_mode = 2
text = "Design: Skenda"

[node name="Sound" type="Label" parent="GuideBook/Credits/VBoxContainer"]
layout_mode = 2
text = "Sound: Not done lol"

[node name="Melee" type="Label" parent="GuideBook/Credits/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_tmmsj")
text = "Thanks for playing!"
vertical_alignment = 1

[node name="CloseBook" type="Button" parent="GuideBook"]
unique_name_in_owner = true
visible = false
offset_left = 31.75
offset_top = -43.75
offset_right = 39.75
offset_bottom = -35.75
rotation = 0.785398
mouse_default_cursor_shape = 2
theme = ExtResource("16_7ajfw")
icon = ExtResource("19_gheru")

[node name="BookShadow" type="Sprite2D" parent="GuideBook"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.156863)
position = Vector2(0, 2)
texture = ExtResource("10_c8jl6")

[connection signal="button_down" from="PlayerOne/PlayerOneNext" to="PlayerOne/PlayerOneNext" method="_on_button_down"]
[connection signal="button_up" from="PlayerOne/PlayerOneNext" to="PlayerOne/PlayerOneNext" method="_on_button_up"]
[connection signal="pressed" from="PlayerOne/PlayerOneNext" to="." method="_on_player_one_next_pressed"]
[connection signal="button_down" from="PlayerOne/PlayerOnePrevious" to="PlayerOne/PlayerOnePrevious" method="_on_button_down"]
[connection signal="button_up" from="PlayerOne/PlayerOnePrevious" to="PlayerOne/PlayerOnePrevious" method="_on_button_up"]
[connection signal="pressed" from="PlayerOne/PlayerOnePrevious" to="." method="_on_player_one_previous_pressed"]
[connection signal="button_down" from="PlayerTwo/PlayerTwoPrevious" to="PlayerTwo/PlayerTwoPrevious" method="_on_button_down"]
[connection signal="button_up" from="PlayerTwo/PlayerTwoPrevious" to="PlayerTwo/PlayerTwoPrevious" method="_on_button_up"]
[connection signal="pressed" from="PlayerTwo/PlayerTwoPrevious" to="." method="_on_player_two_previous_pressed"]
[connection signal="button_down" from="PlayerTwo/PlayerTwoNext" to="PlayerTwo/PlayerTwoNext" method="_on_button_down"]
[connection signal="button_up" from="PlayerTwo/PlayerTwoNext" to="PlayerTwo/PlayerTwoNext" method="_on_button_up"]
[connection signal="pressed" from="PlayerTwo/PlayerTwoNext" to="." method="_on_player_two_next_pressed"]
[connection signal="button_down" from="Bottom Buttons Panel/GameButtons/quit/QUIT/QUIT" to="." method="_on_quit_button_down"]
[connection signal="button_up" from="Bottom Buttons Panel/GameButtons/quit/QUIT/QUIT" to="." method="_on_quit_button_up"]
[connection signal="mouse_entered" from="Bottom Buttons Panel/GameButtons/quit/QUIT/QUIT" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="Bottom Buttons Panel/GameButtons/quit/QUIT/QUIT" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="Bottom Buttons Panel/GameButtons/quit/QUIT/QUIT" to="." method="_on_quit_pressed"]
[connection signal="button_down" from="Bottom Buttons Panel/GameButtons/start/START/START" to="." method="_on_start_button_down"]
[connection signal="button_up" from="Bottom Buttons Panel/GameButtons/start/START/START" to="." method="_on_start_button_up"]
[connection signal="mouse_entered" from="Bottom Buttons Panel/GameButtons/start/START/START" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="Bottom Buttons Panel/GameButtons/start/START/START" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="Bottom Buttons Panel/GameButtons/start/START/START" to="." method="_on_start_pressed"]
[connection signal="button_down" from="Bottom Buttons Panel/TimerButtons/Increase" to="." method="_on_increase_button_down"]
[connection signal="button_up" from="Bottom Buttons Panel/TimerButtons/Increase" to="." method="_on_increase_button_up"]
[connection signal="pressed" from="Bottom Buttons Panel/TimerButtons/Increase" to="." method="_on_increase_pressed"]
[connection signal="button_down" from="Bottom Buttons Panel/TimerButtons/Decrease" to="." method="_on_decrease_button_down"]
[connection signal="button_up" from="Bottom Buttons Panel/TimerButtons/Decrease" to="." method="_on_decrease_button_up"]
[connection signal="pressed" from="Bottom Buttons Panel/TimerButtons/Decrease" to="." method="_on_decrease_pressed"]
[connection signal="pressed" from="GuideBook/Page3" to="." method="_on_page_3_pressed"]
[connection signal="pressed" from="GuideBook/Page2" to="." method="_on_page_2_pressed"]
[connection signal="pressed" from="GuideBook/Page1" to="." method="_on_page_1_pressed"]
[connection signal="mouse_entered" from="GuideBook/OpenBook" to="." method="_on_open_book_mouse_entered"]
[connection signal="mouse_exited" from="GuideBook/OpenBook" to="." method="_on_open_book_mouse_exited"]
[connection signal="pressed" from="GuideBook/OpenBook" to="." method="_on_open_book_pressed"]
[connection signal="pressed" from="GuideBook/CloseBook" to="." method="_on_close_book_pressed"]
